--- a/style.css
+++ b/style.css
@@ -76,7 +76,33 @@ li a:hover:not(.active) {
   padding: 20px;
   margin: 0px;
 }
+@media only screen and (min-width: 900px){
+  .content{
+    width: 85%;
+  }
 
+  li {
+    float: left;
+  }
+  .column {
+    float: left;
+    width: 40%;
+    padding: 5%
+  }
+  .ul1 {
+    display: inline-block;
+    text-align: left;
+    background-color: #D3C5BF;
+    line-height: 1.5;
+  }
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+}
 @media only screen and (min-width: 1025px){
   .content{
     width: 60%;
